ChangeLog

Upcoming version
[!!!]      In this version the deprecated scheduler task is removed, use the provided schedulable console command instead.
[!!!]      To use the feature "Make search word parameter changeable" you will need to adapt the changes in the template "SearchForm.html" (line 13-17, line 31) to your own template.
[FEATURE]  Make search word parameter changeable to be able to track search words with GA4. Thanks to Mike Street. https://github.com/tpwd/ke_search/issues/124
[BUGFIX]   Fix typehint and quoting for targetpid parameter from int to string. Thanks to Naderio. https://github.com/tpwd/ke_search/issues/129
[BUGFIX]   Fix undefined array key includeFilters in Pluginbase.php. Thanks to Andreas Kessel. https://github.com/tpwd/ke_search/pull/133
[TASK]     Remove deprecated scheduler task for indexing, use schedulable console command instead as explained in https://docs.typo3.org/p/tpwd/ke_search/main/en-us/Indexing/Index.html#starting-the-indexing-process-automatically
[TASK]     Add PHPStan as dev requirement
[TASK]     Add TYPO3/coding-standards as dev requirement
[TASK]     Code cleanup according to PHPStan
[TASK]     Code cleanup according to PHPStorm code inspections
[TASK]     Code cleanup according to php-cs-fixer
[TASK]     Add PHPStan check as a GitHub Action
[TASK]     Add php-cs-fixer check as a GitHub Action
[TASK]     Remove unused Behat tests for now
[TASK]     Add startingPoints public method to Filter class. Thanks to Mike Street. https://github.com/tpwd/ke_search/pull/132
[DOCS]     Fix documentation about when the conjunctions in the search phrase won't work.
[DOCS]     Add information about contributing in README.rst

Version 4.5.1, September 2022
[BUGFIX]   Fix labels for hidden_content and show hidden_content in index records (applies only when index records are made visible by Page TSconfig).
[BUGFIX]   Show images with language "All" in result list. Thanks to Stephan Bauer. https://github.com/tpwd/ke_search/issues/77