@@ -31,6 +31,7 @@ use Tpwd\KeSearch\Indexer\IndexerBase;
 use Tpwd\KeSearch\Indexer\IndexerRunner;
 use Tpwd\KeSearch\Lib\Fileinfo;
 use Tpwd\KeSearch\Lib\SearchHelper;
+use Tpwd\KeSearch\Service\FileService;
 use TYPO3\CMS\Core\Core\Environment;
 use TYPO3\CMS\Core\Resource\Folder;
 use TYPO3\CMS\Core\Resource\Index\MetaDataRepository;
@@ -177,7 +178,8 @@ class File extends IndexerBase
                 $filesInFolder = $folder->getFiles();
                 if (count($filesInFolder)) {
                     foreach ($filesInFolder as $file) {
-                        if (GeneralUtility::inList($this->indexerConfig['fileext'], $file->getExtension())) {
+                        if ($file instanceof \TYPO3\CMS\Core\Resource\File
+                            && FileService::isFileIndexable($file, $this->indexerConfig)) {
                             $files[] = $file;
                         }
                     }
